# qubridge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
configs/: train_breast_cancer.yaml  train_synthetic.json  train_synthetic.yaml
docs/: PERFORMANCE.md
examples/: basic_forward.py  train_binary_classification.py  train_breast_cancer.py
qubridge/: __init__.py  train.py
qubridge/data/: __init__.py  real.py  synthetic.py
qubridge/models/: __init__.py  classical.py  hybrid_net.py  quantum_layer.py
scripts/: predict.py  train_breast_cancer.py  train_synthetic.py
tests/: test_model_shapes.py  test_real_data.py  test_training_behaviors.py
